Tests en 3.9.9-amazoncorretto-23