@@ -6,7 +6,6 @@ import fr.inra.oresing.domain.data.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public abstract class ManyValuesStaticColumn extends Column {
 
@@ -20,7 +19,7 @@ public abstract class ManyValuesStaticColumn extends Column {
     public void pushValue(final String cellContent, final DataDatum referenceDatum, final Map<String, Map<String, RefsLinkedToValue>> refsLinkedTo) {
         final List<String> values = Splitter.on(CSV_CELL_SEPARATOR)
                 .splitToStream(cellContent)
-                .collect(Collectors.toList());
+                .toList();
         final DataColumnValue referenceColumnValue = new DataColumnMultipleValue(values);
         referenceDatum.put(getReferenceColumn(), referenceColumnValue);
     }
